# moonshot

./: .env  .gitignore  README.md  Taskfile.yml  docker-compose.yml  package-lock.json  package.json
code/backend/Ms-Chat/: app.js
code/backend/Ms-Chat/Chat/: chat.js  package.json
code/backend/Ms-Chat/src/: chat.js  package-lock.json  package.json
code/backend/Ms-Chat/temp-auth/: auth.js  package-lock.json  package.json
code/backend/auth-service/: .env  Cargo.toml  Dockerfile
code/backend/auth-service/src/: config.rs  handlers.rs  main.rs  models.rs  rabbitmq.rs  routes.rs  services.rs  utils.rs
code/backend/event-service/: .env  composer.json  docker-compose.yml
code/backend/event-service/migrations/: Version20240711105535.php  Version20240711110916.php
code/backend/event-service/mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
code/backend/hello_world_api/: Cargo.toml  Dockerfile
code/backend/hello_world_api/src/: main.rs
code/backend/media-service/: .env  composer.json
code/backend/media-service/config/: MediaType.php
code/backend/media-service/docker/: Dockerfile
code/backend/media-service/migrations/: Version20240708082717.php  Version20240708083723.php  Version20240716100542.php
code/backend/social-service/: .env  composer.json
code/backend/social-service/migrations/: Version20240717123458.php  Version20240717123848.php  Version20240717132807.php  Version20240722112534.php  Version20240722124338.php
code/backend/temp-auth-service/: .env  composer.json
code/backend/temp-auth-service/config/: services.yaml
code/backend/temp-auth-service/docker/: entrypoint.sh
code/backend/temp-auth-service/migrations/: Version20240708154302.php  Version20240716121102.php
code/backend/temp-auth-service/tests/: FirstTest.php
code/backend/user-service/: .env  Cargo.toml  Dockerfile  Taskfile.yml  diesel.toml  docker-compose.yml
code/backend/user-service/migrations/2024-07-16-172916_create_users/: up.sql
code/backend/user-service/migrations/2024-07-16-172923_create_addresses/: up.sql
code/backend/user-service/scripts/: init.sql
code/backend/user-service/src/: config.rs  dto.rs  handlers.rs  lib.rs  main.rs  models.rs  mq.rs  routes.rs  schema.rs
code/frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
code/frontend/android/: build.gradle
code/frontend/src/: App.tsx  main.tsx
code/frontend/src/api/: network.js
code/frontend/src/components/: Button.tsx  EventCard.tsx  FeedCard.tsx  Header.tsx  ProfilCard.tsx  RegisterForm.tsx
code/frontend/src/libs/: api.ts  (+1 more)
code/frontend/temp-front/: chat.html  error.html  login.html  ok.html  room.html  rooms.html  temp-auth.html
infra/krakend/: krakend.json
(+259 files in other folders)
