[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.4.0"
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["macros", "runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
syn = { version = "2.0.70", features = ["derive", "parsing", "proc-macro"] }
futures-util = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tokio-amqp = "2.0.0"
dotenv = "0.15"
jsonwebtoken = "9.3.0"
reqwest = "0.12.5"
chrono = { version = "0.4.38", features = ["serde"] }
quote = "1.0.9"
proc-macro2 = "1.0.86"
bcrypt = "0.15.1"
mongodb = "3.0.1"
log = "0.4.22"
env_logger = "0.11.3"

[[bin]]
name = "auth-service"
path = "src/main.rs"
